# dvault

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
contracts/icp/: .gitignore  Cargo.toml  Makefile  dfx.json  dvault.did
contracts/icp/dvault/: README.md  dfx.json
contracts/icp/dvault/src/dvault_backend/: Cargo.toml
contracts/icp/src/: lib.rs
contracts/icp/tests/: agent.rs  all.rs  default.rs
docs/: flow.puml
dvaultd/: .gitignore  Cargo.toml  Makefile
dvaultd/src/: crypto.rs  ipfs.rs  main.rs
dvaultd/src/contracts/: icp.rs  mod.rs
