[workspace]
members = ["dvaultd", "contracts/icp"]
default-members = ["dvaultd", "contracts/icp"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.217", features = [], default-features = false }
candid = { version = "0.10.12", features = [], default-features = false }
ic-agent = { version = "0.39.1", features = ["pem"], default-features = false }
serde_json = { version = "1.0.137", features = [], default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"], default-features = false }
