[package]
name = "dvaultd"
version = "0.1.0"
edition = "2021"

[dependencies]
dvault = { path = "../contracts/icp", features = [], default-features = false }
serde = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.31", features = ["std", "derive", "help"], default-features = false }
