[package]
name = "dvaultd"
version = "0.1.0"
edition = "2021"

[dependencies]
dvault = { path = "../contracts/icp", features = [], default-features = false }
serde = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
clap = { version = "4.5.31", features = ["std", "derive", "help"], default-features = false }
reqwest = { version = "0.12.12", features = ["multipart", "json"], default-features = false }
curve25519-dalek = { version = "4.1.3", features = [], default-features = false }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], default-features = false }
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core"], default-features = false }
chacha20poly1305 = { version = "0.10.1", features = ["alloc", "getrandom"], default-features = false }
sha2 = { version = "0.10.8", features = [], default-features = false }
base64 = { version = "0.22.1", features = ["std"], default-features = false }
signal-hook = { version = "0.3.17", features = [], default-features = false }
