[package]
name = "dvault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { workspace = true }
candid = { workspace = true }
ic-cdk = { version = "0.17.1", features = [], default-features = false }
ic-stable-structures = { version = "0.6.7", features = [], default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
ic-agent = { workspace = true }
tokio = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
